--- a/style.css
+++ b/style.css
@@ -5,16 +5,20 @@ body{
 h1{
     font-size: 50px;
 }
+h2{
+    font-size: 40px;
+}
 .orange-color{
     color: orange;
 }
-section{
+.flexible-container{
     display: flex;
     margin-bottom: 120px;
 }
 .half-width{
     width: 50%;
     padding-left: 5%;
+
 }
 .half-width img{
     width: 80%;
@@ -35,4 +39,26 @@ section{
     background-image: url(images/dream-bg.png);
     background-repeat: no-repeat;
     background-position: right;
+}
+.experience-area{
+    background-image: url(images/exp-bg.png);
+    background-repeat: no-repeat;
+    background-position: left;
+}
+.experience-item{
+    width: 40%;
+    margin-left: 5%;
+    margin-right: 5%;
+    padding-left: 20px;
+    box-shadow: 10px 20px 40px goldenrod;
+    border-radius: 10px;
+}
+#full-stack-webdeveloper{
+    border-left: 7px solid black;
+}
+#full-baby-webdeveloper{
+    border-left: 7px solid blue;
+}
+footer p{
+    text-align: center;
 }
